[package]
name = "basic_tcp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
